<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:animateLayoutChanges="true"
	android:focusable="true"
	android:focusableInTouchMode="true"
	android:orientation="vertical"
	android:paddingEnd="16dp"
	android:paddingStart="16dp"
	>

	<TextView
		style="@style/TimerGroupHeader"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Summary"
		/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>

		<LinearLayout
			android:layout_width="@dimen/dimen_icon_height"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>

			<ImageView
				android:layout_width="@dimen/dimen_icon_height"
				android:layout_height="@dimen/dimen_icon_height"
				android:padding="12dp"
				app:srcCompat="@drawable/ic_save"
				/>

			<ImageView
				android:layout_width="@dimen/dimen_icon_height"
				android:layout_height="@dimen/dimen_icon_height"
				android:padding="12dp"
				app:srcCompat="@drawable/ic_alarm_end"
				/>

			<ImageView
				android:id="@+id/imageView"
				android:layout_width="@dimen/dimen_icon_height"
				android:layout_height="@dimen/dimen_icon_height"
				android:padding="12dp"
				app:srcCompat="@drawable/ic_tone"
				/>

			<ImageView
				android:layout_width="@dimen/dimen_icon_height"
				android:layout_height="@dimen/dimen_icon_height"
				android:padding="12dp"
				app:srcCompat="@drawable/ic_repeat"
				/>

			<ImageView
				android:layout_width="@dimen/dimen_icon_height"
				android:layout_height="@dimen/dimen_icon_height"
				android:padding="12dp"
				app:srcCompat="@drawable/ic_tag"
				/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>

			<TextView
				android:id="@+id/timer_start"
				style="@style/TimerGroupInput"
				android:layout_width="match_parent"
				android:background="?attr/selectableItemBackground"
				android:text="@string/hint_start"
				/>

			<TextView
				android:id="@+id/timer_end"
				style="@style/TimerGroupInput"
				android:layout_width="match_parent"
				android:background="?attr/selectableItemBackground"
				android:text="@string/hint_end"
				/>

			<TextView
				android:id="@+id/timer_notify"
				style="@style/TimerGroupInput"
				android:layout_width="match_parent"
				android:background="?attr/selectableItemBackground"
				android:text="@string/hint_tone"
				/>

			<TextView
				android:id="@+id/timer_repeat"
				style="@style/TimerGroupInput"
				android:layout_width="match_parent"
				android:background="?attr/selectableItemBackground"
				android:text="@string/hint_repeat"
				/>

			<com.google.android.flexbox.FlexboxLayout
				android:id="@+id/timer_tags"
				style="@style/TimerGroupInput"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="6dp"
				app:flexWrap="wrap"
				/>

		</LinearLayout>
	</LinearLayout>
</LinearLayout>
