<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:animateLayoutChanges="true"
	android:focusable="true"
	android:focusableInTouchMode="true"
	android:orientation="vertical"
	android:paddingEnd="16dp"
	android:paddingStart="16dp"
	>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>

		<LinearLayout
			android:id="@+id/group_time_date"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>

			<TextView
				style="@style/TimerGroupHeader"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Remind me at"
				/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				>

				<ImageView
					android:layout_width="@dimen/dimen_icon_height"
					android:layout_height="@dimen/dimen_icon_height"
					android:padding="12dp"
					app:srcCompat="@drawable/ic_clock"
					/>

				<TextView
					android:id="@+id/add_end_time"
					style="@style/TimerGroupContent"
					android:layout_width="match_parent"
					android:text="@string/string_dummy_time"
					/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				>

				<ImageView
					android:layout_width="@dimen/dimen_icon_height"
					android:layout_height="@dimen/dimen_icon_height"
					android:padding="12dp"
					app:srcCompat="@drawable/ic_calendar"
					/>


				<TextView
					android:id="@+id/add_end_date"
					style="@style/TimerGroupContent"
					android:layout_width="match_parent"
					android:text="@string/string_dummy_date"
					/>
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/group_timer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:visibility="gone"
			>

			<TextView
				style="@style/TimerGroupHeader"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Remind me after"
				/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				>

				<ImageView
					android:layout_width="@dimen/dimen_icon_height"
					android:layout_height="@dimen/dimen_icon_height"
					android:padding="12dp"
					app:srcCompat="@drawable/ic_timer"
					/>

				<TextView
					android:id="@+id/add_end_timer"
					style="@style/TimerGroupContent"
					android:layout_width="match_parent"
					android:text="@string/string_dummy_timer"
					/>
			</LinearLayout>
		</LinearLayout>

	</RelativeLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		>

		<ImageView
			android:id="@+id/group_input_toggle"
			style="@style/TimerGroupbutton"
			android:layout_width="@dimen/dimen_icon_height"
			android:layout_height="@dimen/dimen_icon_height"
			android:adjustViewBounds="true"
			android:background="?attr/selectableItemBackgroundBorderless"
			android:padding="12dp"
			app:srcCompat="@drawable/ic_toggle_input"
			/>

		<TextView
			android:id="@+id/input_detail"
			style="@style/TimerMeta"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="end"
			android:text="2 hours later"
			/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/group_details"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		>

		<TextView
			style="@style/TimerGroupHeader"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Details"
			/>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>

			<LinearLayout
				android:layout_width="@dimen/dimen_icon_height"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				>

				<ImageView
					android:id="@+id/imageView2"
					android:layout_width="@dimen/dimen_icon_height"
					android:layout_height="@dimen/dimen_icon_height"
					android:padding="12dp"
					app:srcCompat="@drawable/ic_name"
					/>

				<ImageView
					android:layout_width="@dimen/dimen_icon_height"
					android:layout_height="@dimen/dimen_icon_height"
					android:padding="12dp"
					app:srcCompat="@drawable/ic_notify"
					/>

				<ImageView
					android:layout_width="@dimen/dimen_icon_height"
					android:layout_height="@dimen/dimen_icon_height"
					android:padding="12dp"
					app:srcCompat="@drawable/ic_tone"
					/>

				<ImageView
					android:layout_width="@dimen/dimen_icon_height"
					android:layout_height="@dimen/dimen_icon_height"
					android:padding="12dp"
					app:srcCompat="@drawable/ic_repeat"
					/>

				<ImageView
					android:layout_width="@dimen/dimen_icon_height"
					android:layout_height="@dimen/dimen_icon_height"
					android:padding="12dp"
					app:srcCompat="@drawable/ic_tag"
					/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				>

				<EditText
					android:id="@+id/add_name"
					style="@style/TimerGroupInput"
					android:layout_width="match_parent"
					android:hint="@string/hint_name"
					android:imeOptions="actionDone"
					android:inputType="textShortMessage"
					android:maxLines="1"
					/>


				<Switch
					android:id="@+id/add_notify"
					style="@style/TimerGroupInput"
					android:layout_width="match_parent"
					android:background="?attr/selectableItemBackground"
					android:text="@string/hint_notify"
					/>

				<TextView
					android:id="@+id/add_tone"
					style="@style/TimerGroupInput"
					android:layout_width="match_parent"
					android:background="?attr/selectableItemBackground"
					android:text="@string/hint_tone"
					/>

				<Switch
					android:id="@+id/add_auto_repeat"
					style="@style/TimerGroupInput"
					android:layout_width="match_parent"
					android:background="?attr/selectableItemBackground"
					android:text="@string/hint_repeat"
					/>

				<com.google.android.flexbox.FlexboxLayout
					android:id="@+id/add_tags_container"
					style="@style/TimerGroupInput"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="6dp"
					app:flexWrap="wrap"
					/>

				<TextView
					android:id="@+id/add_tags"
					style="@style/TimerGroupInput"
					android:layout_width="match_parent"
					android:background="?android:attr/selectableItemBackground"
					android:text="Add new tag"
					/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
