<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="@dimen/height_timer_list_item"
	android:background="@color/colorDeletedLayout"
	android:elevation="1dp"
	>

	<!--<FrameLayout-->
	<!--android:layout_width="match_parent"-->
	<!--android:layout_height="match_parent"-->
	<!--android:background="@color/colorDeletedLayout"-->
	<!--&gt;-->

	<Button
		android:id="@+id/timer_undo_delete"
		style="@style/Widget.AppCompat.Button.Borderless"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_centerInParent="true"
		android:background="@color/colorDeletedLayout"
		android:padding="16dp"
		android:text="Undo"
		android:textColor="@color/white"
		/>
	<!--</FrameLayout>-->

	<FrameLayout
		android:id="@+id/timer_background"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:animateLayoutChanges="true"
			android:background="?android:attr/selectableItemBackground"
			android:orientation="vertical"
			>

			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="@dimen/height_timer_container"
				android:animateLayoutChanges="true"
				>

				<FrameLayout
					android:layout_width="wrap_content"
					android:layout_height="48dp"
					android:layout_gravity="center_vertical"
					android:layout_marginStart="16dp"
					>

					<ProgressBar
						android:id="@+id/timer_progress"
						style="@style/Timer.Progress"
						android:layout_width="48dp"
						android:layout_height="48dp"
						android:progressDrawable="@drawable/circular_progress_bar"
						/>

					<ToggleButton
						android:id="@+id/timer_pause_toggle"
						style="@style/Timer.ToggleButton"
						android:layout_width="48dp"
						android:layout_height="48dp"
						/>
				</FrameLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginEnd="16dp"
					android:layout_marginStart="72dp"
					android:animateLayoutChanges="true"
					android:orientation="vertical"
					>

					<TextView
						android:id="@+id/timer_name"
						style="@style/Timer.Title"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="4dp"
						android:text="@string/string_dummy_name"
						/>

					<TextView
						android:id="@+id/timer_remaining_time"
						style="@style/Timer.Time"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="4dp"
						android:ellipsize="end"
						android:maxLines="1"
						android:text="@string/string_dummy_timer"
						/>

					<TextView
						android:id="@+id/timer_end_datetime"
						style="@style/Timer.Detail"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:ellipsize="end"
						android:maxLines="1"
						android:text="@string/string_dummy_timer_detail"
						/>
				</LinearLayout>
			</FrameLayout>

			<LinearLayout
				android:id="@+id/bottom_container"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginEnd="16dp"
				android:layout_marginStart="16dp"
				android:gravity="center_vertical"
				android:orientation="vertical"
				>

				<View
					android:layout_width="match_parent"
					android:layout_height="@dimen/height_seperator"
					android:layout_marginEnd="10dp"
					android:layout_marginStart="10dp"
					android:background="@color/gray"
					/>


				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					>

					<HorizontalScrollView
						android:layout_width="0dp"
						android:layout_height="@dimen/height_timer_info_container"
						android:layout_weight="1"
						android:background="@color/colorWhiteTransparent"
						android:overScrollMode="never"
						android:requiresFadingEdge="horizontal"
						android:scrollbars="none"
						>

						<LinearLayout
							android:id="@+id/timer_tag_container"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_gravity="center_vertical"
							android:divider="@drawable/transparent_divider"
							android:orientation="horizontal"
							android:showDividers="middle"
							/>


					</HorizontalScrollView>

					<LinearLayout
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:divider="@drawable/transparent_divider"
						android:paddingBottom="5dp"
						android:paddingTop="5dp"
						android:showDividers="middle"
						>

						<ImageView
							android:id="@+id/timer_indicator_nofity"
							style="@style/Timer.Icons"
							android:src="@drawable/ic_notify_enabled"
							/>

						<ImageView
							android:id="@+id/timer_indicator_silent"
							style="@style/Timer.Icons"
							android:src="@drawable/ic_tone_enabled"
							/>

						<ImageView
							android:id="@+id/timer_indicator_repeat"
							style="@style/Timer.Icons"
							android:src="@drawable/ic_repeat_enabled"
							/>
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="@dimen/height_seperator"
				android:background="@color/gray"
				/>

		</LinearLayout>
	</FrameLayout>
</RelativeLayout>
